--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -5,40 +5,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_news_item"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="0dp"
+    app:cardCornerRadius="0dp"
+    app:cardBackgroundColor="@color/gray_200">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="122dp">
+        android:layout_height="90dp">
 
         <ImageView
             android:id="@+id/image_news_image"
-            android:layout_width="144dp"
-            android:layout_height="108dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            tools:src="@drawable/irma_hurricane_23_gty_jc_170910_4x3t_144"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="160dp"
+            android:layout_height="90dp"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:src="@drawable/irma_hurricane_23_gty_jc_170910_16x9t_240"/>
 
         <TextView
             android:id="@+id/text_news_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:textSize="14sp"
             android:textColor="#000000"
+            android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/image_news_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/image_news_image"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            tools:text="Irma: Sheriff’s deputy, corrections officer among Florida deaths"/>
+            tools:text="Irma: Sheriff’s deputy, corrections officer among Florida deaths" />
 
         <TextView
             android:id="@+id/text_news_description"
@@ -47,29 +45,27 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="4dp"
+            android:layout_marginBottom=    "8dp"
             android:textSize="12sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_news_title"
             app:layout_constraintRight_toLeftOf="@+id/image_news_image"
             app:layout_constraintHorizontal_bias="0.0"
-            tools:text="At least seven people in Florida and one person in Georgia have died as a result of the storm."
-            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/text_news_pubdate"
-            app:layout_constraintVertical_bias="0.6"/>
+            app:layout_constraintVertical_bias="0.6"
+            tools:text="At least seven people in Florida and one person in Georgia have died as a result of the storm."/>
 
         <TextView
             android:id="@+id/text_news_pubdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            tools:text="Tue, 12 Sep 2017 06:37"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/image_news_image"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="Tue, 12 Sep 2017 06:37" />
 
     </android.support.constraint.ConstraintLayout>
 
