--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -47,6 +47,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom=    "8dp"
             android:textSize="12sp"
+            android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_news_title"
             app:layout_constraintRight_toLeftOf="@+id/image_news_image"
@@ -63,6 +64,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:textSize="10sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="Tue, 12 Sep 2017 06:37" />
