--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="pink_a200">#FF4081</color>
 
     <color name="indigo_500">#3F51B5</color>
-    <color name="indigo_700">#303F9F</color>
+    <color name="indigo_700">#303F9F</color>`
     <color name="indigo_900">#1A237E</color>
 
     <color name="gray_100">#F5F5F5</color>
@@ -13,5 +13,4 @@
 
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
-    <color name="primary_text_default_material_light">#deffffff</color>
 </resources>
